added drawing in the canvas version.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
     </head>
 
     <body>
-        <div> </div>
+        <div id="cc">
 
-        <ul class="nav">
-            <li style="width: 50%;"> <a href="#F">CanvasVersion</a> </li>
-            <li style=" width:46.6%;"> <a href="#S">jQueryVersion</a> </li>
-        </ul>
-        <img src="images/Etch-A-Sketch.jpg" id="imgEtch">
+            <ul class="nav">
+                <a id="F" href="html/CanvasVersion.html">
+                    <li style="width: 50%;"> CanvasVersion </li>
+                </a>
+                <a href="#S">
+                    <li style=" width:46.6%;"> jQueryVersion </li>
+                </a>
+            </ul>
+            <img src="images/Etch-A-Sketch.jpg" class="midEtch">
 
+        </div>
 
     </body>
 
