Initializing a class for drop down lists.

--- a/html/CanvasVersion.html
+++ b/html/CanvasVersion.html
@@ -18,15 +18,20 @@
     <body>
         <ul class="nav">
             <a id="clear" href="javascript:void(0);">
-                <li style="width: 20%;"> Erase </li>
+                <li style="width: 25%;"> Erase </li>
             </a>
             <a href="javascript:void(0);">
-                <li id="Colid" style=" width:20%; ">COLORS
+                <li id="Colid" style=" width:25%; ">COLORS
                     <i class="fa fa-caret-down" style="display: inline;"></i>
                     <i class="fa fa-caret-up" style="display: none;"></i>
                 </li>
             </a>
-
+            <a href="javascript:void(0);">
+                <li id="dwnldButton" style="width: 25%;">DOWNLOAD</li>
+            </a>
+            <a href="javascript:void(0);">
+                <li id="sizeButton" style="width: 24%;">BRUSH SIZE</li>
+            </a>
         </ul>
         <input type="color" id="colorPicker" class="hidden">
         <div id="ColiDiv" style=" position:absolute;display: none;">
