--- a/html/CanvasVersion.html
+++ b/html/CanvasVersion.html
@@ -14,6 +14,7 @@
     <script src="../js/jquery/jquery-3.1.1.min.js">
     </script>
     <script src="../js/CanvasV.js"></script>
+    <script src="../js/filesaver/FileSaver.min.js"></script>
 
     <body>
         <ul class="nav">
