--- a/html/CanvasVersion.html
+++ b/html/CanvasVersion.html
@@ -10,6 +10,7 @@
     <title>EAS(Canvas)</title>
     <link type="text/css" rel="stylesheet" href="../css/styles.css">
     <link type="text/css" rel="stylesheet" href="../css/CanvasV.css">
+    <link type="text/css" rel="stylesheet" href="../css/Navbar.css">
     <link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css">
     <script src="../js/jquery/jquery-3.1.1.min.js">
     </script>
@@ -19,7 +20,7 @@
     <body>
         <ul class="nav">
             <a id="clear" href="javascript:void(0);">
-                <li style="width: 23%;"> Erase </li>
+                <li style="width: 23%;"> CLEAR </li>
             </a>
             <a href="javascript:void(0);">
                 <li id="top_Cols" style=" width:23%; " onclick="showDL('Cols');">COLORS
