--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+<head>
 
-        <meta charset="utf-8">
-        <meta name="description" content="Web version of Etch a Sketch">
-        <meta name="keywords" content="HTML CSS JAVASCRIPT JQUERY HTML5 CANVAS">
-        <meta name="author" content="AsmCoder110">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="description" content="Web version of Etch a Sketch">
+    <meta name="keywords" content="HTML CSS JAVASCRIPT JQUERY HTML5 CANVAS">
+    <meta name="author" content="AsmCoder110">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/styles.css">
-        <script src="js/jquery/jquery-3.1.1.min.js"></script>
-        <script src="js/eas.js"></script>
-        <title>Etch-A-Sketch</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery/jquery-3.1.1.min.js"></script>
+    <script src="js/eas.js"></script>
+    <title>Etch-A-Sketch</title>
 
-    </head>
+</head>
 
-    <body>
-        <div id="cc">
+<body>
+    <div id="cc">
 
-            <ul class="nav">
-                <a id="F" href="html/CanvasVersion.html">
-                    <li style="width: 50%;"> CanvasVersion </li>
-                </a>
-                <a href="#S">
-                    <li style=" width:46.6%;"> jQueryVersion </li>
-                </a>
-            </ul>
-            <img src="images/Etch-A-Sketch.jpg" class="midEtch">
+        <ul class="nav">
+            <a id="F" href="html/CanvasVersion.html">
+                <li style="width: 50%;"> CanvasVersion </li>
+            </a>
+            <a href="html/jQueryVersion.html">
+                <li style=" width:46.6%;"> jQueryVersion </li>
+            </a>
+        </ul>
+        <img src="images/Etch-A-Sketch.jpg" class="midEtch">
 
-        </div>
+    </div>
 
-    </body>
+</body>
 
 </html>
